--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,8 +49,7 @@ jobs:
     - task: DotNetCoreInstaller@0
       displayName: 'Use .NET Core sdk 2.1.503'
       inputs:
-         version: 2.2.1#2.1.503
-
+         version: 2.2.1  
   
     - task: NuGetToolInstaller@0
 
