--- a/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
@@ -72,5 +72,6 @@
     <ProjectReference Include="..\Stankins.Razor\Stankins.Razor.csproj" />
     <ProjectReference Include="..\Stankins.SimpleRecipes\Stankins.SimpleRecipes.csproj" />
     <ProjectReference Include="..\Stankins.SqlServer\Stankins.SqlServer.csproj" />
+    <ProjectReference Include="..\StankinsHelperCommands\StankinsHelperCommands.csproj" />
   </ItemGroup>
 </Project>
