--- a/stankinsv2/solution/StankinsV2/Stankins.Console/Stankins.Console.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Console/Stankins.Console.csproj
@@ -24,6 +24,7 @@
     <ProjectReference Include="..\Stankins.Office\Stankins.Office.csproj" />
     <ProjectReference Include="..\Stankins.Process\Stankins.Process.csproj" />
     <ProjectReference Include="..\Stankins.Razor\Stankins.Razor.csproj" />
+    <ProjectReference Include="..\Stankins.Rest\Stankins.Rest.csproj" />
     <ProjectReference Include="..\Stankins.SimpleRecipes\Stankins.SimpleRecipes.csproj" />
     <ProjectReference Include="..\Stankins.SqlServer\Stankins.SqlServer.csproj" />
     <ProjectReference Include="..\Stankins.Version\Stankins.Version.csproj" />
