--- a/stankinsv2/solution/Dockerfile_linux
+++ b/stankinsv2/solution/Dockerfile_linux
@@ -1,4 +1,4 @@
-FROM microsoft/dotnet:2.1-sdk-alpine AS build-env
+FROM microsoft/dotnet:2.2-sdk AS build-env
 #ARG version
 WORKDIR /app
 
@@ -10,7 +10,7 @@ COPY . ./
 RUN dotnet publish -c Release -r linux-x64 -o out StankinsV2/StankinsStatusWeb/StankinsAliveMonitor.csproj 
 
 # build runtime image
-FROM microsoft/dotnet:2.1-runtime-deps
+FROM microsoft/dotnet:2.2-runtime-deps
 WORKDIR /app
 COPY --from=build-env /app/StankinsV2/StankinsStatusWeb/out ./
 ENV ASPNETCORE_URLS=http://+:5000
