--- a/stankinsv2/solution/StankinsV2/docker-compose.yml
+++ b/stankinsv2/solution/StankinsV2/docker-compose.yml
@@ -9,24 +9,35 @@ services:
             - -c
             - |
                 npm i
-                ng serve --host 0.0.0.0 --poll 500
-            
+                ng serve --host 0.0.0.0 --proxy-config proxy.conf.js --poll 500                
+
         volumes:
              - "./StankinsAliveAngular:/usr/app/"
              
         ports:
             - "4200:4200"
             - "49153:49153"
+            
     netcore:
         build:
             context: .
             dockerfile: dockerNETCore   
             
-        command: dotnet watch -p StankinsStatusWeb/StankinsAliveMonitor.csproj build    
+        command: dotnet watch -p StankinsStatusWeb/StankinsAliveMonitor.csproj run --urls http://0.0.0.0:5000
             
         volumes:
              - "./:/usr/app/"
              
         ports:
             - "5000:5000"
-    
+            
+    #netcoretest:
+    #    build:
+    #        context: .
+    #        dockerfile: dockerNETCore   
+    #    
+    #    command: dotnet watch -p StankinsTestXUnit/StankinsTestXUnit.csproj test --filter ExternalDependency=0
+    #        
+    #    volumes:
+    #         - "./:/usr/app/"
+             
