--- a/stankinsv2/solution/StankinsV2/docker-compose.yml
+++ b/stankinsv2/solution/StankinsV2/docker-compose.yml
@@ -9,7 +9,7 @@ services:
             - -c
             - |
                 npm i
-                ng serve --host 0.0.0.0 --proxy-config proxy.conf.js --poll 500                
+                ng serve --host 0.0.0.0 --proxy-config proxy.docker.conf.js --poll 500                
 
         volumes:
              - "./StankinsAliveAngular:/usr/app/"
