--- a/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
@@ -22,6 +22,7 @@
     <None Remove="Assets\otherbooksmarks.html" />
     <None Remove="Assets\XML\nbrfxrates.xml" />
     <None Remove="Assets\yaml\myp.myml" />
+    <None Remove="Assets\dll\Stankins.File.dll" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\JSON\json1Record.txt">
@@ -63,6 +64,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\TestSolutionAnalyzer\TestSolutionAnalyzer.sln">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\dll\Stankins.File.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
