--- a/stankinsv2/solution/StankinsV2/Stankins.Interpreter/Stankins.Interpreter.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Interpreter/Stankins.Interpreter.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\StankinsHelperCommands\StankinsHelperCommands.csproj" />
     <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
   </ItemGroup>
 
