--- a/stankinsv2/solution/StankinsV2/Stankins.SqlServer/Stankins.SqlServer.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.SqlServer/Stankins.SqlServer.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Stankins.File\Stankins.File.csproj" />
+    <ProjectReference Include="..\Stankins.File\Stankins.FileOps.csproj" />
     <ProjectReference Include="..\Stankins.Office\Stankins.Office.csproj" />
     <ProjectReference Include="..\Stankins.Razor\Stankins.Razor.csproj" />
     <ProjectReference Include="..\StankinsReceiverDB\StankinsReceiverDB.csproj" />
