--- a/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
@@ -6,8 +6,14 @@
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Assets\TestSolutionAnalyzer\ConsoleApp1\bin\**" />
+    <Compile Remove="Assets\TestSolutionAnalyzer\ConsoleApp1\obj\**" />
     <Compile Remove="TestResults\**" />
+    <EmbeddedResource Remove="Assets\TestSolutionAnalyzer\ConsoleApp1\bin\**" />
+    <EmbeddedResource Remove="Assets\TestSolutionAnalyzer\ConsoleApp1\obj\**" />
     <EmbeddedResource Remove="TestResults\**" />
+    <None Remove="Assets\TestSolutionAnalyzer\ConsoleApp1\bin\**" />
+    <None Remove="Assets\TestSolutionAnalyzer\ConsoleApp1\obj\**" />
     <None Remove="TestResults\**" />
   </ItemGroup>
   <ItemGroup>
