--- a/stankinsv2/solution/StankinsV2/Stankins.Interpreter/Stankins.Interpreter.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Interpreter/Stankins.Interpreter.csproj
@@ -8,9 +8,13 @@
     <None Remove="Recipes\v1\BNR.txt" />
     <None Remove="Recipes\v1\ExportAzurePipelinesToDot.txt" />
     <None Remove="Recipes\v1\ExportSolutionToHtmlAndDot.txt" />
+    <None Remove="Recipes\v1\ExportTableToExcelSql.txt" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Recipes\v1\ExportTableToExcelSql.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Recipes\v1\ExportSolutionToHtmlAndDot.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
