--- a/stankinsv2/solution/Dockerfile_win
+++ b/stankinsv2/solution/Dockerfile_win
@@ -6,4 +6,4 @@ COPY win10-x64/ ./
 #COPY win10-x64/wwwroot ./wwwroot
 ENV ASPNETCORE_URLS=http://+:5000
 EXPOSE 5000/tcp
-CMD ["StankinsAliveMonitor.exe"]  
+CMD ["StankinsData.exe"]  
