--- a/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/package.json
+++ b/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/package.json
@@ -26,6 +26,7 @@
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "versions-netcore-angular": "0.0.7",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
