--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -701,7 +701,7 @@ jobs:
       inputs:
         azureSubscription: 'azurestankins'
         WebAppName: 'azurestankins'
-        Package: $(System.ArtifactsDirectory)/*StankinsStatusWeb*.zip
+        Package: $(System.ArtifactsDirectory)/*StankinsDataWeb*.zip
         ResourceGroupName: 'stankins'
                
     - task: AzureAppServiceManage@0
