--- a/stankinsv2/solution/StankinsV2/StankinsData/StankinsDataWeb.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsData/StankinsDataWeb.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+	<OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
