--- a/stankinsv2/solution/StankinsV2/StankinsData/StankinsDataWeb.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsData/StankinsDataWeb.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
+    <PackageReference Include="NSwag.AspNetCore" Version="12.0.14" />
   </ItemGroup>
 
   <ItemGroup>
