--- a/stankinsv2/solution/StankinsV2/StankinsData/StankinsDataWeb.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsData/StankinsDataWeb.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
     <PackageReference Include="NSwag.AspNetCore" Version="12.0.14" />
+    <PackageReference Include="Polly" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
